force-app/main/default/objects/Trailer__c/Trailer__c.object-meta.xml
<CustomObject>
    <label>Trailer</label>
    <nameField>
        <displayFormat>TR{0000}</displayFormat>
        <label>Trailer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trailers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>