force-app/main/default/objects/Trailer__c/fields/Trailer_Number__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Number__c</fullName>
    <label>Trailer Number</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>