force-app/main/default/objects/Trailer__c/fields/Trailer_URL__c.field-meta.xml
<CustomField>
    <fullName>Trailer_URL__c</fullName>
    <label>Trailer URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>