force-app/main/default/objects/Trailer__c/fields/Tv_Serie__c.field-meta.xml
<CustomField>
    <fullName>Tv_Serie__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tv Serie</label>
    <referenceTo>Tv_Serie__c</referenceTo>
    <relationshipLabel>Trailers</relationshipLabel>
    <relationshipName>Trailers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>