force-app/main/default/objects/Trailer__c/validationRules/Trailer_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Trailer_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Trailer_Number__c &lt; 1,Trailer_Number__c &gt;1000)</errorConditionFormula>
    <errorMessage>Trailer number should be between 1 and 1000.</errorMessage>
</ValidationRule>